derive_tests/tests/compile_fail/unexpected_validator.rs
use validify::Validate;

#[derive(Validate)]
struct NotAValidator {
    #[validate(my_custom_validator)]
    field: String,
}

fn main() {}
