derive_tests/tests/compile_fail/unexpected_validator.stderr
error: Uncrecognized validate parameter
 --> tests/compile_fail/unexpected_validator.rs:5:16
  |
5 |     #[validate(my_custom_validator)]
  |                ^^^^^^^^^^^^^^^^^^^
